# nikcli-main

./: .dockerignore  .editorconfig  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .vercelignore  .vimrc  ADAPTIVE_ROUTER_FALLBACK.md  AGENTS.md  AI_INTEGRATION_ANALYSIS_REPORT.md  AI_OPTIMIZATION_REPORT.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_FLOW.md  ARCHITECTURE_VISUAL_REFERENCE.md  AUDIT_COMPLETO_IT.md  BACKGROUND_AGENTS.md  BACKUP_CHECKPOINT_20251028.md  BACKUP_SUMMARY_REPORT.md  BASELINE_ANALYSIS_REPORT.md  BASELINE_CONTEXT_ANALYSIS.md  BOXEN_PANELS.md  BUILD.md  CHANGELOG.md  CLI_Dependency_Analysis_Report.md  CLOUD-SETUP.md  CODEBASE_ARCHITECTURE.md  CODEBASE_MAP.md  COMPREHENSIVE_CODE_ANALYSIS_REPORT.md  COMPREHENSIVE_SYSTEM_ARCHITECTURE.mmd  CONTEXT_ESTABLISHMENT_SUMMARY.md  CONTEXT_INDEX_INTERACTIVE_SUMMARY.md  CONTEXT_INDEX_REAL_IMPLEMENTATION.md  CRITICAL_FINDINGS.md  CURRENT_PROJECT_ANALYSIS.md  DEEP_ANALYSIS_REMAKE_v2.md  DEEP_DIVE_ACTION_PLAN.md  DEPENDENCY_ACTION_PLAN.md  DEPENDENCY_ANALYSIS_REPORT.md  (+160 more)
api/: ws.js  (+4 more)
nikcli-rust/: .gitignore  COMPLETION_PLAN.md  Cargo.toml  FINAL_ANALYSIS_REPORT.md  IMPLEMENTATION_STATUS.md  MISSING_FILES_REPORT.md  README.md  SESSION_1_FINAL_REPORT.md  SESSION_1_SUMMARY.md  SESSION_PROGRESS.md  VERIFIED_COMPARISON_REPORT.md
nikcli-rust/src/: http_client_stub.rs  lib.rs  main.rs  streaming_orchestrator.rs
nikcli-rust/src/ai/: adaptive_model_router.rs  advanced_ai_provider.rs  ai_lib_config.rs  ai_lib_stub.rs  cognitive_features_config.rs  mod.rs  model_provider.rs  modern_ai_provider.rs  reasoning_detector.rs
nikcli-rust/src/automation/: mod.rs  workflow_orchestrator.rs
nikcli-rust/src/background_agents/: background_service.rs  mod.rs
nikcli-rust/src/browser/: browser_manager.rs  mod.rs
nikcli-rust/src/chat/: autonomous_claude_interface.rs  chat_manager.rs  mod.rs  nik_cli_commands.rs  stream_manager.rs
nikcli-rust/src/cli/: banner_animator.rs  introduction_module.rs  main_orchestrator.rs  mod.rs  nik_cli.rs  onboarding_module.rs  options.rs  prompt_renderer.rs  register_agents.rs  service_module.rs  slash_command_handler.rs  streaming_module.rs  system_module.rs  unified_cli.rs
nikcli-rust/src/commands/: cad_commands.rs  command_handler.rs  mod.rs  slash_commands.rs
nikcli-rust/src/config/: feature_flags.rs  mod.rs  token_limits.rs
nikcli-rust/src/context/: context_manager.rs  docs_context_manager.rs  mod.rs  rag_system.rs  semantic_search.rs  workspace_context.rs  workspace_rag.rs
nikcli-rust/src/core/: agent_factory.rs  agent_learning_system.rs  agent_manager.rs  agent_router.rs  agent_stream.rs  agent_todo_manager.rs  ai_provider.rs  analytics_manager.rs  cache_provider.rs  chat_manager.rs  cloud_docs_provider.rs  completion_protocol_cache.rs  config_manager.rs  context_token_manager.rs  documentation_library.rs  enhanced_token_cache.rs  error_handler.rs  event_bus.rs  feedback_system.rs  ide_detector.rs  input_queue.rs  intelligent_feedback_wrapper.rs  logger.rs  mcp_client.rs  mod.rs  module_manager.rs  performance_optimizer.rs  planning_manager.rs  project_memory.rs  resource_manager.rs  session_context.rs  session_manager.rs  smart_completion_manager.rs  token_cache.rs  token_manager.rs  token_optimizer.rs  tool_router.rs  universal_tokenizer_service.rs  validator_manager.rs
nikcli-rust/src/guidance/: guidance_manager.rs  mod.rs
nikcli-rust/src/integrations/: git_integration.rs  ide_diagnostic_integration.rs  mod.rs
nikcli-rust/src/lsp/: lsp_client.rs  lsp_manager.rs  mod.rs
nikcli-rust/src/middleware/: audit_middleware.rs  logging_middleware.rs  mod.rs  performance_middleware.rs  security_middleware.rs
nikcli-rust/src/persistence/: edit_history.rs  enhanced_session_manager.rs  mod.rs  work_session_manager.rs
nikcli-rust/src/planning/: autonomous_planner.rs  enhanced_planning.rs  mod.rs  plan_executor.rs  plan_generator.rs  planning_manager.rs  types.rs  validation_config.rs
nikcli-rust/src/policies/: execution_policy.rs  mod.rs
nikcli-rust/src/prompts/: mod.rs  prompt_manager.rs
nikcli-rust/src/providers/: image.rs  mod.rs  vision.rs
nikcli-rust/src/services/: agent_service.rs  ai_completion_service.rs  cache_service.rs  dashboard_service.rs  lsp_service.rs  memory_service.rs  mod.rs  orchestrator_service.rs  planning_service.rs  service_module.rs  snapshot_service.rs  tool_service.rs  unified_tool_renderer.rs
nikcli-rust/src/streaming/: mod.rs  stream_manager.rs  stream_orchestrator.rs
nikcli-rust/src/tools/: command_tools.rs  diff_tool.rs  edit_tool.rs  file_tools.rs  git_tools.rs  grep_tool.rs  mod.rs  secure_tools_registry.rs  tools_manager.rs
nikcli-rust/src/types/: cache.rs  mod.rs  services.rs  types.rs
nikcli-rust/src/ui/: advanced_cli_ui.rs  approval_system.rs  banner.rs  diff_manager.rs  diff_viewer.rs  ide_aware_formatter.rs  mod.rs  token_aware_status_bar.rs  ui_manager.rs
nikcli-rust/src/utils/: async_lock.rs  circuit_breaker.rs  logger.rs  mod.rs  paste_handler.rs  string_extensions.rs  structured_logger.rs  syntax_highlighter.rs  terminal_helpers.rs  text_wrapper.rs  validation.rs
nikcli-rust/src/virtualized_agents/: container_manager.rs  mod.rs  secure_vm_agent.rs  vm_metrics_fix.rs  vm_orchestrator.rs  vm_selector.rs
rust-cli/: Cargo.toml  README.md
rust-cli/src/: main.rs
rust-cli/src/ai/: adaptive_model_router.rs  advanced_ai_provider.rs  ai_call_manager.rs  mod.rs  model_provider.rs  modern_ai_provider.rs
rust-cli/src/automation/: mod.rs
rust-cli/src/background_agents/: mod.rs
rust-cli/src/chat/: autonomous_claude_interface.rs  chat_interface.rs  chat_manager.rs  chat_orchestrator.rs  mod.rs  nik_cli_commands.rs  stream_manager.rs
rust-nikcli/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  config.example.toml
rust-nikcli/examples/: basic_usage.rs
rust-nikcli/src/: error.rs  main.rs
rust-nikcli/tests/: integration_tests.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menubar.rs  pty.rs
(+1770 files in other folders)
