[package]
name = "nikcli"
version = "0.5.0"
edition = "2021"
authors = ["nikomatt69"]
description = "NikCLI - Context-Aware AI Development Assistant (Rust Implementation)"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "nikcli"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# CLI and Terminal UI
clap = { version = "4.5", features = ["derive", "cargo"] }
crossterm = "0.28"
ratatui = "0.29"
dialoguer = { version = "0.11", features = ["fuzzy-select", "password"] }
indicatif = "0.17"
console = "0.15"
colored = "2.1"
termion = "4.0"

# AI SDK - Unified multi-provider with ai-lib
ai-lib = { version = "=0.3.3", features = ["interceptors", "unified_sse", "unified_transport", "cost_metrics", "routing_mvp"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }

# Configuration and Environment
config = "0.14"
dotenv = "0.15"
toml = "0.8"
yaml-rust = "0.4"

# HTTP Client and Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
hyper = "1.5"

# Database and Storage
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "json", "chrono", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sled = "0.34"  # Embedded key-value store

# Vector Database (optional)
qdrant-client = "1.12"  # Alternative to ChromaDB
# fastembed removed to avoid ORT compile issues on some systems.

# File System and Path handling
walkdir = "2.5"
glob = "0.3"
notify = "6.1"  # File watching (chokidar equivalent)
tempfile = "3.13"
dirs = "5.0"  # User directories

# Git operations
git2 = "0.19"

# Diff and Patch
similar = "2.6"  # Diff library
patch = "0.7"

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1.9"
url = "2.5"
regex = "1.11"
lazy_static = "1.5"
nanoid = "0.4"
rustc_version_runtime = "0.3"

# JSON and YAML handling
serde_yaml = "0.9"
json-patch = "3.0"

# Markdown and Terminal rendering
pulldown-cmark = "0.12"  # Markdown parser
syntect = "5.2"          # Syntax highlighting

# WebSockets
tokio-tungstenite = "0.24"

# Templating
tera = "1.20"
handlebars = "6.2"

# Testing
mockito = "1.6"

# Process execution
which = "7.0"

# Encoding and Hashing
base64 = "0.22"
sha2 = "0.10"
blake3 = "1.5"

# Rate limiting
governor = "0.6"

# JWT
jsonwebtoken = "9.3"

# HTML parsing (for web scraping)
scraper = "0.21"
select = "0.6"

# Browser automation (Playwright equivalent)
fantoccini = "0.21"  # WebDriver client
headless_chrome = "1.0"

# Supabase client
postgrest = "1.0"

# Security
argon2 = "0.5"
ring = "0.17"

# Parallel processing
rayon = "1.10"

# Memory management
dashmap = "6.1"  # Concurrent HashMap

# Command execution
subprocess = "0.2"

# YAML frontmatter
yaml-front-matter = "0.1"

# Terminal colors and styles
owo-colors = "4.1"

# AI tokenization
tiktoken-rs = "0.6"

# HTTP headers
headers = "0.4"

# State management (Zustand equivalent)
arc-swap = "1.7"

# Event system
event-listener = "5.3"

# Path manipulation
path-clean = "1.0"

# Debouncing
debounce = "0.2"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
termion = "4.0"
