[package]
name = "nikcli-rust"
version = "0.1.0"
edition = "2021"
authors = ["NikCLI Team"]
description = "Rust implementation of NikCLI - Advanced AI-powered CLI assistant"
license = "MIT"

[[bin]]
name = "nikcli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# HTTP client for AI APIs
reqwest = { version = "0.11", features = ["json", "stream"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UI and colors
crossterm = "0.27"
console = "0.15"
indicatif = "0.17"
colored = "2.1"

# Interactive input
rustyline = "13.0"
dialoguer = "0.11"

# Configuration management
config = "0.14"
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Markdown rendering
termimad = "0.28"

# File system operations
walkdir = "2.4"
glob = "0.3"

# Regular expressions
regex = "1.10"

# Streaming utilities
futures = "0.3"
async-stream = "0.3"

# Prompt caching and optimization
lru = "0.12"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
