[package]
name = "nikcli"
version = "0.5.0"
edition = "2021"
authors = ["nikomatt69"]
description = "NikCLI - Context-Aware AI Development Assistant (Rust Implementation)"
license = "MIT"
rust-version = "1.70"

[[bin]]
name = "nikcli"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# CLI and Terminal UI
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
colored = "2.0"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lazy_static = "1.4"
nanoid = "0.4"
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory management
dashmap = "5.5"

# File System
walkdir = "2.4"
tempfile = "3.8"
dirs = "5.0"

# Process execution
which = "4.4"

# Encoding
base64 = "0.21"

# Parallel processing
rayon = "1.8"

# State management
arc-swap = "1.6"

# Event system
event-listener = "4.0"

# Additional dependencies
indicatif = "0.17"
dialoguer = { version = "0.10", features = ["fuzzy-select", "password"] }
thiserror = "1.0"
sha2 = "0.10"
similar = "2.4"
syntect = "5.0"
# git2 = "0.18"  # Removed due to OpenSSL dependency
once_cell = "1.19"
validator = { version = "0.18", features = ["derive"] }
# reqwest = { version = "0.11", features = ["json", "rustls-tls"] }  # Removed due to OpenSSL dependency
# rustls = "0.21"  # Removed due to OpenSSL dependency
# redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }  # Removed due to OpenSSL dependency
# ai-lib = { version = "=0.3.3", features = ["interceptors", "unified_sse", "unified_transport", "cost_metrics", "routing_mvp"] }  # Removed due to OpenSSL dependency
termion = "1.5"
rustc_version_runtime = "0.3"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true