[package]
name = "nikcli-desktop"
version = "0.1.0"
description = "NikCLI Desktop Application"
authors = ["NikCLI Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "nikcli_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
menubar = ["tauri-nspanel", "reqwest"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1", optional = true }
portable-pty = "0.8"
tokio = { version = "1", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
